# data-efficiency-MES-Ulcer

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: example.yaml
configs/experiments/: data_efficiency.yaml
notebooks/: 02_training_monitoring.ipynb  03_learning_curves.ipynb  04_results_analysis.ipynb  05_explainability.ipynb
results/letter_figures/: table1_results_100pct.csv  table2_limuc_100pct.csv
results/mes/data_efficiency/: experiment_meta.json  mes_best_per_fraction.csv  results.csv  results_per_seed.csv
results/mes/data_efficiency/predictions/efficientnetb0_finetune_linear_10pct_seed42/: test_probs.npy
results/mes/data_efficiency/predictions/vits16_imagenet_finetune_linear_10pct_seed42/: test_labels.npy  test_probs.npy
results/mes/data_efficiency_LIMUC/: results.csv  results_per_seed.csv
results/ulcer/data_efficiency/: experiment_meta.json  results.csv  results_per_seed.csv  ulcer_best_per_fraction.csv
results/ulcer/data_efficiency/predictions/efficientnetb0_finetune_linear_10pct_seed42/: test_probs.npy
results/ulcer/data_efficiency/predictions/vits16_imagenet_finetune_linear_10pct_seed42/: test_labels.npy  test_probs.npy
scripts/: run_all.py
scripts/mes/: create_manifest.py  run_data_efficiency.py
scripts/ulcer/: create_manifest.py  generate_confusion_matrices.py  run_data_efficiency.py
src/config/: __init__.py  loader.py  models.py  paths.py  training.py  validation.py
src/data/: dataloader.py  dataset.py  manifest_utils.py
src/evaluation/: __init__.py  aggregation.py  metrics.py  plots.py
src/models/: classifier.py
src/utils/: __init__.py  common.py  logging.py
src/visualization/: __init__.py  explainability.py
